syntax = "proto3";

option java_multiple_files = true;
option java_package = "alarm";
option java_outer_classname = "AlarmServiceImpl";

package alarm;

// Interface exported by the server.
service AlarmService {

  rpc routeTracking(stream Point) returns (stream RouteNote);
  
}

message Point {
  double latitude = 1;
  double longitude = 2;
}


// A Livestock is a message sent while at a given point.
message RouteNote {
  // The location from which the message is sent.
  Point location = 1;

  // The message to be sent.
  string tag = 2;
}